# egx-trading-analysis

./: Dockerfile  README.md  main.py  mcp_server.py  pyproject.toml
app/: analysis.py  data.py  indicators.py  models.py
