[project]
name = "egx-App"
version = "0.1.0"
description = "A simple trading analysis application"
readme = "README.md"
requires-python =  ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
